fixed index picture not showing

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -25,9 +25,7 @@ h4 {
   color: #333;
 }
 
-p {
-  /* font-size: 17px; */
-}
+
 
 a {
   color: #f33e78;
